--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,10 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, "Help") %>
+<h1>Help</h1>
+<p>
+  Get help on the RUby on Rails Tutorial at the
+  <a href="http://ww.railstutorial.org/#help">Rails Tutorial help section</a>.
+  To get help on this sample app, see the
+  <a href="http://wwww.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
+  book</a>
+</p>
+    
